// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parser: literals > Row 1`] = `
{
  "type": "lit",
  "value": {
    "type": "Atom",
    "value": "Row",
  },
  Symbol(snapshot:stripped): true,
}
`;

exports[`parser: literals > Type 1`] = `
{
  "type": "lit",
  "value": {
    "type": "Atom",
    "value": "Type",
  },
  Symbol(snapshot:stripped): true,
}
`;

exports[`parser: literals > boolean: true 1`] = `
{
  "type": "lit",
  "value": {
    "type": "Bool",
    "value": "true",
  },
  Symbol(snapshot:stripped): true,
}
`;

exports[`parser: literals > number: 1 1`] = `
{
  "type": "lit",
  "value": {
    "type": "Num",
    "value": 1,
  },
  Symbol(snapshot:stripped): true,
}
`;

exports[`parser: literals > string: "hello" 1`] = `
{
  "type": "lit",
  "value": {
    "type": "String",
    "value": "hello",
  },
  Symbol(snapshot:stripped): true,
}
`;

exports[`parser: literals > unit: * 1`] = `
{
  "type": "lit",
  "value": {
    "type": "unit",
  },
  Symbol(snapshot:stripped): true,
}
`;
